[gd_scene load_steps=19 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://Effects/Environment.tres" type="Environment" id=4]
[ext_resource path="res://World/TileMaps/SandMap.tres" type="TileSet" id=5]
[ext_resource path="res://World/TileMaps/bigger_dirt.png" type="Texture" id=6]
[ext_resource path="res://Levels/Boss.gd" type="Script" id=7]
[ext_resource path="res://Enemies/Stag/States/StagBeetle.tscn" type="PackedScene" id=8]
[ext_resource path="res://World/Sticks/Stick1.tscn" type="PackedScene" id=9]
[ext_resource path="res://World/BigElements/Wood.tscn" type="PackedScene" id=10]
[ext_resource path="res://Levels/DynamicPlayerCam.tscn" type="PackedScene" id=11]
[ext_resource path="res://World/TileMaps/moss_test.png" type="Texture" id=18]
[ext_resource path="res://Levels/TileMap.gd" type="Script" id=22]
[ext_resource path="res://World/TileMaps/moss_3x3.png" type="Texture" id=43]

[sub_resource type="TileSet" id=1]
0/name = "moss_test.png 0"
0/texture = ExtResource( 18 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 64, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "moss_test.png 1"
1/texture = ExtResource( 18 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 128, 32, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "moss_test.png 2"
2/texture = ExtResource( 18 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 96, 64, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "moss_test.png 3"
3/texture = ExtResource( 18 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 128, 64, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "moss_3x3.png 0"
0/texture = ExtResource( 43 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 352, 160 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 3 ), 48, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 56, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 3 ), 24, Vector2( 3, 0 ), 144, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 18, Vector2( 3, 3 ), 16, Vector2( 4, 0 ), 176, Vector2( 4, 1 ), 182, Vector2( 4, 2 ), 434, Vector2( 4, 3 ), 50, Vector2( 4, 4 ), 178, Vector2( 5, 0 ), 248, Vector2( 5, 1 ), 255, Vector2( 5, 2 ), 507, Vector2( 5, 3 ), 59, Vector2( 5, 4 ), 251, Vector2( 6, 0 ), 440, Vector2( 6, 1 ), 447, Vector2( 6, 2 ), 510, Vector2( 6, 3 ), 62, Vector2( 6, 4 ), 446, Vector2( 7, 0 ), 152, Vector2( 7, 1 ), 155, Vector2( 7, 2 ), 218, Vector2( 7, 3 ), 26, Vector2( 7, 4 ), 154, Vector2( 8, 0 ), 184, Vector2( 8, 1 ), 191, Vector2( 8, 2 ), 506, Vector2( 8, 3 ), 58, Vector2( 8, 4 ), 186, Vector2( 9, 0 ), 443, Vector2( 9, 1 ), 254, Vector2( 9, 2 ), 442, Vector2( 9, 3 ), 190, Vector2( 10, 2 ), 250, Vector2( 10, 3 ), 187 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="CircleShape2D" id=3]
radius = 767.467

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 724.468, 114.053 )

[node name="BossLevel" type="Node2D"]
position = Vector2( -5.18408, -0.020752 )
script = ExtResource( 7 )

[node name="DirtTexture" type="TextureRect" parent="."]
margin_left = -5038.0
margin_top = -8300.0
margin_right = 7474.0
margin_bottom = 4267.0
texture = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SandMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1245204, 0, 0, -1245203, 0, 4, -1245202, 0, 4, -1245201, 0, 4, -1245200, 0, 4, -1245199, 0, 4, -1245198, 0, 4, -1245197, 0, 4, -1245196, 0, 4, -1245195, 0, 4, -1245194, 0, 4, -1245193, 0, 4, -1245192, 0, 4, -1245191, 0, 1, -1179668, 0, 131072, -1179667, 0, 131075, -1179666, 0, 131074, -1179665, 0, 131079, -1179664, 0, 131074, -1179663, 0, 131075, -1179662, 0, 131075, -1179661, 0, 131074, -1179660, 0, 131076, -1179659, 0, 131076, -1179658, 0, 131074, -1179657, 0, 131074, -1179656, 0, 131075, -1179655, 0, 131073, -1114132, 0, 131072, -1114131, 0, 7, -1114130, 0, 131076, -1114129, 0, 7, -1114128, 0, 131076, -1114127, 0, 131076, -1114126, 0, 7, -1114125, 0, 6, -1114124, 0, 131074, -1114123, 0, 131075, -1114122, 0, 131074, -1114121, 0, 131075, -1114120, 0, 131074, -1114119, 0, 131073, -1048596, 0, 131072, -1048595, 0, 131074, -1048594, 0, 131075, -1048593, 0, 131075, -1048592, 0, 131074, -1048591, 0, 131075, -1048590, 0, 131076, -1048589, 0, 131074, -1048588, 0, 131076, -1048587, 0, 131074, -1048586, 0, 131074, -1048585, 0, 131076, -1048584, 0, 65542, -1048583, 0, 131073, -983060, 0, 131072, -983059, 0, 131075, -983058, 0, 131074, -983057, 0, 131074, -983056, 0, 131076, -983055, 0, 131075, -983054, 0, 131077, -983053, 0, 131074, -983052, 0, 131076, -983051, 0, 131076, -983050, 0, 131075, -983049, 0, 5, -983048, 0, 131076, -983047, 0, 131073, -917524, 0, 131072, -917523, 0, 131076, -917522, 0, 131074, -917521, 0, 131075, -917520, 0, 131077, -917519, 0, 131074, -917518, 0, 131076, -917517, 0, 131074, -917516, 0, 131074, -917515, 0, 131074, -917514, 0, 131074, -917513, 0, 131076, -917512, 0, 131074, -917511, 0, 131073, -851988, 0, 131072, -851987, 0, 131075, -851986, 0, 131074, -851985, 0, 131075, -851984, 0, 131076, -851983, 0, 131074, -851982, 0, 131075, -851981, 0, 131075, -851980, 0, 131075, -851979, 0, 131076, -851978, 0, 131076, -851977, 0, 131076, -851976, 0, 131076, -851975, 0, 131073, -786452, 0, 131072, -786451, 0, 131080, -786450, 0, 131074, -786449, 0, 131076, -786448, 0, 131076, -786447, 0, 131076, -786446, 0, 131076, -786445, 0, 131074, -786444, 0, 131076, -786443, 0, 131076, -786442, 0, 131076, -786441, 0, 131074, -786440, 0, 131076, -786439, 0, 131073, -720916, 0, 131072, -720915, 0, 131075, -720914, 0, 131076, -720913, 0, 131074, -720912, 0, 131076, -720911, 0, 6, -720910, 0, 131076, -720909, 0, 131076, -720908, 0, 131076, -720907, 0, 131076, -720906, 0, 131076, -720905, 0, 7, -720904, 0, 131076, -720903, 0, 131073, -655380, 0, 131072, -655379, 0, 131074, -655378, 0, 131075, -655377, 0, 131075, -655376, 0, 8, -655375, 0, 131074, -655374, 0, 131076, -655373, 0, 131074, -655372, 0, 131075, -655371, 0, 131074, -655370, 0, 131074, -655369, 0, 131074, -655368, 0, 131075, -655367, 0, 131073, -589844, 0, 65536, -589843, 0, 3, -589842, 0, 131076, -589841, 0, 131074, -589840, 0, 131076, -589839, 0, 131075, -589838, 0, 131075, -589837, 0, 131075, -589836, 0, 131075, -589835, 0, 2, -589834, 0, 65540, -589833, 0, 65540, -589832, 0, 65540, -589831, 0, 65537, -524307, 0, 131072, -524306, 0, 131076, -524305, 0, 131076, -524304, 0, 131075, -524303, 0, 65543, -524302, 0, 131074, -524301, 0, 131075, -524300, 0, 131076, -524299, 0, 131073, -458771, 0, 131072, -458770, 0, 131076, -458769, 0, 131075, -458768, 0, 131076, -458767, 0, 131076, -458766, 0, 131078, -458765, 0, 131074, -458764, 0, 131075, -458763, 0, 131073, -393235, 0, 131072, -393234, 0, 131074, -393233, 0, 131076, -393232, 0, 65541, -393231, 0, 131077, -393230, 0, 65541, -393229, 0, 131075, -393228, 0, 131075, -393227, 0, 131073, -327699, 0, 131072, -327698, 0, 131076, -327697, 0, 131075, -327696, 0, 131076, -327695, 0, 131074, -327694, 0, 131074, -327693, 0, 131076, -327692, 0, 131074, -327691, 0, 131073, -262163, 0, 131072, -262162, 0, 131078, -262161, 0, 131075, -262160, 0, 131075, -262159, 0, 131076, -262158, 0, 131075, -262157, 0, 131079, -262156, 0, 131074, -262155, 0, 131073, -196631, 0, 0, -196630, 0, 4, -196629, 0, 4, -196628, 0, 4, -196627, 0, 65539, -196626, 0, 131075, -196625, 0, 131074, -196624, 0, 131075, -196623, 0, 131074, -196622, 0, 131075, -196621, 0, 131074, -196620, 0, 131076, -196619, 0, 65538, -196618, 0, 4, -196617, 0, 4, -196616, 0, 4, -196615, 0, 1, -131095, 0, 131072, -131094, 0, 131077, -131093, 0, 131075, -131092, 0, 131074, -131091, 0, 131074, -131090, 0, 131076, -131089, 0, 131077, -131088, 0, 131074, -131087, 0, 8, -131086, 0, 131076, -131085, 0, 8, -131084, 0, 131080, -131083, 0, 131074, -131082, 0, 131074, -131081, 0, 131074, -131080, 0, 131074, -131079, 0, 131073, -65559, 0, 131072, -65558, 0, 131074, -65557, 0, 131076, -65556, 0, 131076, -65555, 0, 65543, -65554, 0, 131076, -65553, 0, 131074, -65552, 0, 131074, -65551, 0, 131076, -65550, 0, 131076, -65549, 0, 131074, -65548, 0, 131075, -65547, 0, 131075, -65546, 0, 131075, -65545, 0, 131076, -65544, 0, 131075, -65543, 0, 131073, -23, 0, 131072, -22, 0, 131076, -21, 0, 131074, -20, 0, 131075, -19, 0, 131075, -18, 0, 131075, -17, 0, 131076, -16, 0, 131075, -15, 0, 131075, -14, 0, 131076, -13, 0, 131076, -12, 0, 131075, -11, 0, 131075, -10, 0, 131074, -9, 0, 131075, -8, 0, 131076, -7, 0, 131073, 65513, 0, 131072, 65514, 0, 131076, 65515, 0, 131076, 65516, 0, 131075, 65517, 0, 131076, 65518, 0, 131075, 65519, 0, 131074, 65520, 0, 131075, 65521, 0, 131076, 65522, 0, 131076, 65523, 0, 131074, 65524, 0, 131078, 65525, 0, 131075, 65526, 0, 131074, 65527, 0, 131075, 65528, 0, 6, 65529, 0, 131073, 131049, 0, 131072, 131050, 0, 131076, 131051, 0, 131076, 131052, 0, 131076, 131053, 0, 131076, 131054, 0, 131074, 131055, 0, 131076, 131056, 0, 131076, 131057, 0, 131074, 131058, 0, 131076, 131059, 0, 131074, 131060, 0, 131074, 131061, 0, 131075, 131062, 0, 131076, 131063, 0, 131075, 131064, 0, 131076, 131065, 0, 131073, 196585, 0, 131072, 196586, 0, 65541, 196587, 0, 131076, 196588, 0, 131075, 196589, 0, 131076, 196590, 0, 131074, 196591, 0, 131076, 196592, 0, 131074, 196593, 0, 131075, 196594, 0, 131074, 196595, 0, 131075, 196596, 0, 131076, 196597, 0, 131076, 196598, 0, 131074, 196599, 0, 131075, 196600, 0, 131074, 196601, 0, 131073, 262121, 0, 131072, 262122, 0, 131075, 262123, 0, 131075, 262124, 0, 131075, 262125, 0, 131076, 262126, 0, 131076, 262127, 0, 131075, 262128, 0, 6, 262129, 0, 131074, 262130, 0, 131076, 262131, 0, 131075, 262132, 0, 131076, 262133, 0, 131074, 262134, 0, 131074, 262135, 0, 131075, 262136, 0, 65543, 262137, 0, 131073, 327657, 0, 131072, 327658, 0, 131076, 327659, 0, 65542, 327660, 0, 131077, 327661, 0, 131076, 327662, 0, 131077, 327663, 0, 131074, 327664, 0, 131074, 327665, 0, 131075, 327666, 0, 131079, 327667, 0, 131075, 327668, 0, 131075, 327669, 0, 2, 327670, 0, 65540, 327671, 0, 65540, 327672, 0, 65540, 327673, 0, 65537, 393193, 0, 131072, 393194, 0, 131074, 393195, 0, 131074, 393196, 0, 131078, 393197, 0, 131074, 393198, 0, 131075, 393199, 0, 131075, 393200, 0, 131075, 393201, 0, 131075, 393202, 0, 131076, 393203, 0, 131074, 393204, 0, 131074, 393205, 0, 131073, 458729, 0, 131072, 458730, 0, 131075, 458731, 0, 131075, 458732, 0, 131074, 458733, 0, 131074, 458734, 0, 131075, 458735, 0, 131076, 458736, 0, 131077, 458737, 0, 131076, 458738, 0, 131076, 458739, 0, 131076, 458740, 0, 131074, 458741, 0, 131073, 524265, 0, 65536, 524266, 0, 65540, 524267, 0, 3, 524268, 0, 131076, 524269, 0, 131074, 524270, 0, 131075, 524271, 0, 131074, 524272, 0, 131074, 524273, 0, 131074, 524274, 0, 131075, 524275, 0, 131075, 524276, 0, 131076, 524277, 0, 131073, 589803, 0, 131072, 589804, 0, 131076, 589805, 0, 131076, 589806, 0, 131076, 589807, 0, 131076, 589808, 0, 131074, 589809, 0, 131076, 589810, 0, 131074, 589811, 0, 131075, 589812, 0, 131076, 589813, 0, 131073, 655338, 0, 0, 655339, 0, 65539, 655340, 0, 131075, 655341, 0, 131074, 655342, 0, 131074, 655343, 0, 131074, 655344, 0, 131076, 655345, 0, 131075, 655346, 0, 131076, 655347, 0, 131075, 655348, 0, 131075, 655349, 0, 65538, 655350, 0, 1, 720874, 0, 65536, 720875, 0, 65540, 720876, 0, 3, 720877, 0, 131075, 720878, 0, 131076, 720879, 0, 131075, 720880, 0, 131074, 720881, 0, 6, 720882, 0, 7, 720883, 0, 131074, 720884, 0, 131079, 720885, 0, 2, 720886, 0, 65537, 786412, 0, 65536, 786413, 0, 65540, 786414, 0, 65540, 786415, 0, 65540, 786416, 0, 65540, 786417, 0, 65540, 786418, 0, 65540, 786419, 0, 65540, 786420, 0, 65540, 786421, 0, 65537 )

[node name="MossMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
collision_layer = 0
collision_mask = 0
format = 1
script = ExtResource( 22 )

[node name="DynamicMossMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -589686, 0, 196611 )
script = ExtResource( 22 )

[node name="YSort" type="YSort" parent="."]
rotation = -0.000373805

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( -988.254, 2410.32 )

[node name="CamRemote" type="RemoteTransform2D" parent="YSort/Player"]
remote_path = NodePath("../../../ScriptedCamera")

[node name="StagBeetle" parent="YSort" instance=ExtResource( 8 )]
position = Vector2( -963.651, 639.417 )

[node name="Wood" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( -443.875, -351.265 )
rotation = 2.24739

[node name="Wood2" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( -1479.53, -341.585 )
rotation = 2.24739

[node name="Stick" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( -2023.54, 693.549 )
rotation = -0.264901

[node name="Stick7" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 19.6445, 734.097 )
rotation = -1.61329

[node name="Stick2" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( -2292.4, 1123.37 )
rotation = -0.938159

[node name="Stick3" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( -2389.12, 1621.71 )
rotation = -1.09027

[node name="Stick4" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( -2259.09, 2081.96 )
rotation = -1.69855

[node name="Stick5" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( -1898.84, 2298.29 )
rotation = 0.396401

[node name="Stick6" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( -1418.58, 2150.02 )
rotation = -0.372761

[node name="Stick8" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( -632.452, 2173.5 )
rotation = -1.76757

[node name="Stick9" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( -235.914, 2210.87 )
rotation = -0.214171

[node name="Stick10" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 116.158, 1804.12 )
rotation = -0.892062

[node name="Stick11" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 202.006, 1195.01 )
rotation = -1.09744

[node name="UI" parent="." instance=ExtResource( 2 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 4 )

[node name="Boundaries" type="Node2D" parent="."]

[node name="Positions" type="Node2D" parent="."]

[node name="PositionTween" type="Tween" parent="Positions"]

[node name="Checkpoints" type="Node" parent="."]

[node name="Detector" type="Node" parent="."]

[node name="DynamicCameraZone" type="Area2D" parent="Detector"]
modulate = Color( 0.188235, 0.188235, 0.188235, 0.290196 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector/DynamicCameraZone"]
position = Vector2( -980.749, 1121.56 )
shape = SubResource( 3 )

[node name="BeginBossZone" type="Area2D" parent="Detector"]
position = Vector2( -1243.77, 1947.69 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector/BeginBossZone"]
position = Vector2( 263.063, -191.971 )
shape = SubResource( 4 )

[node name="ScriptedCamera" parent="." instance=ExtResource( 3 )]
position = Vector2( -987.353, 2410.69 )
rotation = -0.000373805

[node name="DynamicPlayerCam" parent="." instance=ExtResource( 11 )]

[connection signal="body_entered" from="Detector/DynamicCameraZone" to="." method="_on_DynamicCameraZone_body_entered"]
[connection signal="body_exited" from="Detector/DynamicCameraZone" to="." method="_on_DynamicCameraZone_body_exited"]
[connection signal="body_entered" from="Detector/BeginBossZone" to="." method="_on_BeginBossZone_body_entered"]
